Add sound effect. Organize files in folders. A few code changes

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <span id="points">0</span>
-    <img id="fish" src="./ricardo.png" alt="ricardo" width="100px" height="75px">
+    <img id="fish" src="/misc/images/ricardo.png" alt="ricardo" width="100px" height="75px">
     <div id=barriers>
         <div class="topBarrier" id="topBarrier">
             <div class="topBarrierBody" id="topBarrierBody">
